--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ license = {text = "MIT"}
 readme = "README.md"
 requires-python = ">=3.10,<3.13"
 dependencies = [
+    "jinja2 (>=3.1.5,<4.0.0)",
+    "latex2mathml (>=3.77.0,<4.0.0)",
+    "matplotlib (>=3.10.1,<3.11.0)",
 ]
 
 
