refactor(project): add template filed for context

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "cSpell.words": [
+        "arcname",
         "epub",
         "mathml",
-        "matplotlib"
+        "matplotlib",
+        "OEBPS",
+        "zinfo"
     ]
 }
