--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,19 @@ authors = [
 ]
 license = {text = "MIT"}
 readme = "README.md"
-requires-python = ">=3.10,<3.13"
+requires-python = ">=3.10,<3.14"
 dependencies = [
     "jinja2 (>=3.1.5,<4.0.0)",
     "latex2mathml (>=3.77.0,<4.0.0)",
     "matplotlib (>=3.10.1,<3.11.0)",
 ]
 
+[project.optional-dependencies]
+dev = [
+    "pylint (>=3.0.0,<4.0.0)",
+    "autopep8 (>=2.0.0,<3.0.0)",
+    "isort (>=5.0.0,<6.0.0)",
+]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
