--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "OEBPS",
         "oomol",
         "pylint",
+        "usetex",
         "zinfo"
     ],
     "python-envs.defaultEnvManager": "ms-python.python:conda",
