--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,13 +29,12 @@ jobs:
 
       - name: Install epubcheck
         run: |
-          sudo apt-get update
-          sudo apt-get install -y wget default-jre
-          wget https://github.com/w3c/epubcheck/releases/download/v5.2.1/epubcheck-5.2.1.zip
-          unzip epubcheck-5.2.1.zip
+          sudo apt-get update -qq
+          sudo apt-get install -y default-jre unzip
+          curl -sL https://github.com/w3c/epubcheck/releases/download/v5.2.1/epubcheck-5.2.1.zip -o epubcheck.zip
+          unzip -q epubcheck.zip
           sudo mv epubcheck-5.2.1 /opt/epubcheck
-          echo '#!/bin/bash' | sudo tee /usr/local/bin/epubcheck
-          echo 'java -jar /opt/epubcheck/epubcheck.jar "$@"' | sudo tee -a /usr/local/bin/epubcheck
+          echo -e '#!/bin/bash\njava -jar /opt/epubcheck/epubcheck.jar "$@"' | sudo tee /usr/local/bin/epubcheck > /dev/null
           sudo chmod +x /usr/local/bin/epubcheck
 
       - name: Run pylint
