--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
         "arcname",
+        "dcterms",
         "epub",
+        "epubcheck",
         "mathml",
         "matplotlib",
+        "noteref",
         "OEBPS",
         "oomol",
         "pylint",
