chore: upgrade to 0.1.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "arcname",
+        "autopep",
         "dcterms",
         "epub",
         "epubcheck",
+        "isort",
         "mathml",
         "matplotlib",
         "noteref",
