chore: limit paths

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,19 @@ on:
   pull_request:
     branches:
       - "main"
+    paths:
+      - "epub_generator/**"
+      - "tests/**"
+      - "poetry.lock"
+      - "pyproject.toml"
   push:
     branches:
       - "main"
+    paths:
+      - "epub_generator/**"
+      - "tests/**"
+      - "poetry.lock"
+      - "pyproject.toml"
 
 jobs:
   build:
