docs: sync README.md (#14)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,11 @@ on:
   push:
     branches:
       - "main"
+    paths:
+      - "epub_generator/**"
+      - "tests/**"
+      - "poetry.lock"
+      - "pyproject.toml"
 
 jobs:
   build:
