feat: add title & caption for all asset classes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "abatilo",
         "arcname",
         "autopep",
         "dcterms",
@@ -12,6 +13,7 @@
         "OEBPS",
         "oomol",
         "pylint",
+        "pypi",
         "pyproject",
         "usetex",
         "Zeyu",
